--- a/implicit/pom.xml
+++ b/implicit/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>implicit</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <description>简化模式 http://www.javaboy.org/2020/0415/oauth2-password-implicit.html</description>
+    <description>简化模式</description>
 
     <modules>
         <module>auth-server-implicit</module>
