--- a/implicit/user-server-implicit/pom.xml
+++ b/implicit/user-server-implicit/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.xmxe</groupId>
     <artifactId>user-server-implicit</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>res</name>
+    <name>user-server-implicit</name>
     <description>资源服务器</description>
 
     <properties>
