--- a/client_credentials/client-app-client/pom.xml
+++ b/client_credentials/client-app-client/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.xmxe</groupId>
     <artifactId>client-app-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>client</name>
+    <name>client-app-client</name>
     <description>第三方app</description>
 
     <properties>
