--- a/client_credentials/pom.xml
+++ b/client_credentials/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>client_credentials</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <description>客户端模式 http://www.javaboy.org/2020/0415/oauth2-password-implicit.html</description>
+    <description>客户端模式</description>
 
     <modules>
         <module>auth-server-client</module>
