--- a/authorization_code_redis/auth-server-redis/pom.xml
+++ b/authorization_code_redis/auth-server-redis/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.xmxe</groupId>
     <artifactId>auth-server-redis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>auth</name>
+    <name>auth-server-redis</name>
     <description>授权服务器</description>
 
     <properties>
