--- a/authorization_code_redis/auth-server-redis/src/main/resources/application.properties
+++ b/authorization_code_redis/auth-server-redis/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.redis.host=127.0.0.1
+spring.redis.host=192.168.236.132
 spring.redis.port=6379
-spring.redis.password=123
+spring.redis.password=123456
 
-spring.datasource.url=jdbc:mysql:///study?useUnicode=true&characterEncoding=UTF-8&serverTimeZone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql:///study?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.password=root
 spring.datasource.username=root
 
+# ?????????? ClientDetailsService????????? ClientDetailsService?
+# ???????????????????????
 spring.main.allow-bean-definition-overriding=true
