--- a/authorization_code_redis/client-app-redis/pom.xml
+++ b/authorization_code_redis/client-app-redis/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.xmxe</groupId>
     <artifactId>client-app-redis</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>client</name>
+    <name>client-app-redis</name>
     <description>第三方app</description>
 
     <properties>
