--- a/jwt/auth-server-jwt/pom.xml
+++ b/jwt/auth-server-jwt/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.xmxe</groupId>
     <artifactId>auth-server-jwt</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>auth</name>
+    <name>auth-server-jwt</name>
     <description>授权服务器</description>
 
     <properties>
