--- a/jwt/pom.xml
+++ b/jwt/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>jwt</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <description>http://www.javaboy.org/2020/0421/oauth2-jwt.html</description>
+    <description>oauth2+jwt</description>
 
     <modules>
         <module>auth-server-jwt</module>
