--- a/oauth2-sso/client1/src/main/resources/application.properties
+++ b/oauth2-sso/client1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 security.oauth2.client.client-secret=123
-security.oauth2.client.client-id=javaboy
+security.oauth2.client.client-id=xmxe
 security.oauth2.client.user-authorization-uri=http://localhost:1111/oauth/authorize
 security.oauth2.client.access-token-uri=http://localhost:1111/oauth/token
 security.oauth2.resource.user-info-uri=http://localhost:1111/user
