--- a/authorization_code_redis/auth-server-redis/src/main/resources/application.properties
+++ b/authorization_code_redis/auth-server-redis/src/main/resources/application.properties
@@ -6,6 +6,5 @@ spring.datasource.url=jdbc:mysql:///study?useUnicode=true&characterEncoding=UTF-
 spring.datasource.password=root
 spring.datasource.username=root
 
-# ?????????? ClientDetailsService????????? ClientDetailsService?
-# ???????????????????????
+# 解决bean重复定义。设置为true时，后定义的bean会覆盖之前定义的相同名称的bean。
 spring.main.allow-bean-definition-overriding=true
